# game-social-network-app/src/main/java/be/intecbrussel/gamesocialnetworkapp/controllers/LikeController.java
@@ -1,12 +1,15 @@
 package be.intecbrussel.gamesocialnetworkapp.controllers;
 
+import be.intecbrussel.gamesocialnetworkapp.models.user.User;
 import be.intecbrussel.gamesocialnetworkapp.requests.LikeRequest;
 import be.intecbrussel.gamesocialnetworkapp.services.LikeService;
+import be.intecbrussel.gamesocialnetworkapp.services.security.JwtService;
 import io.swagger.v3.oas.annotations.tags.Tag;
 import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.core.Authentication;
+import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.Map;
@@ -18,6 +21,7 @@ import java.util.Map;
 public class LikeController {
 
     private final LikeService likeService;
+    private final JwtService jwtService;
 
     @PostMapping
     public ResponseEntity<Long> saveLike(
@@ -40,5 +44,11 @@ public class LikeController {
             Authentication connectedUser
     ){
         return ResponseEntity.ok(likeService.deleteLike(likeId, connectedUser));
+    }
+
+    @GetMapping("/{postId}/liked")
+    public ResponseEntity<Boolean> isPostLiked(@RequestHeader("Authorization") String token, @PathVariable Long postId) {
+        boolean hasLiked = likeService.hasUserLikedPost(token, postId);
+        return ResponseEntity.ok(hasLiked);
     }
 }
