# game-social-network-app/src/main/java/be/intecbrussel/gamesocialnetworkapp/responses/PostResponse.java
@@ -17,4 +17,5 @@ public class PostResponse {
     private byte[] image;
     private boolean archived;
     private boolean shareable;
+    private boolean hasLiked;
 }
