# game-social-network-ui/src/app/services/models/post-response.ts
@@ -4,6 +4,7 @@ export interface PostResponse {
   archived?: boolean;
   author?: string;
   content?: string;
+  hasLiked?: boolean;
   id?: number;
   image?: Array<string>;
   resume?: string;
